--- a/styles/UI/_overlay.scss
+++ b/styles/UI/_overlay.scss
@@ -11,6 +11,7 @@
   visibility: hidden;
   opacity: 0;
   transition: $defaultTransitionTime;
+  padding: 16px;
   &.active {
     visibility: visible;
     opacity: 1;
@@ -25,5 +26,12 @@
     top: 50px;
     right: 50px;
     cursor: pointer;
+    z-index: 99999;
+  }
+  @media (max-width: 675px) {
+    &__close-btn {
+      top: 26px;
+      right: 11px;
+    }
   }
 }
