--- a/styles/index.css
+++ b/styles/index.css
@@ -1199,6 +1199,7 @@ section {
   visibility: hidden;
   opacity: 0;
   transition: 0.23s;
+  padding: 16px;
 }
 .overlay.active {
   visibility: visible;
@@ -1214,6 +1215,13 @@ section {
   top: 50px;
   right: 50px;
   cursor: pointer;
+  z-index: 99999;
+}
+@media (max-width: 675px) {
+  .overlay__close-btn {
+    top: 26px;
+    right: 11px;
+  }
 }
 
 .popup {
@@ -1347,6 +1355,27 @@ section {
     font-size: 12px;
     line-height: 110%;
     max-width: 225px;
+  }
+}
+@media (max-width: 525px) {
+  .popup {
+    padding: 40px 24px;
+    max-width: 350px;
+    background-position: left -131px top -55px, right -246px bottom -46px, left -160px bottom -18px, top 48px right 13px;
+    background-size: 552px 308px, 552px 308px, 552px 308px, 60px 32px;
+  }
+  .popup .form__btn {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 14px */
+    letter-spacing: -0.28px;
+    text-transform: uppercase;
+  }
+}
+@media (max-width: 425px) {
+  .popup {
+    background-position: left -131px top -55px, right -246px bottom -46px, left -160px bottom -18px, top 27px right 11px;
   }
 }
 
