--- a/styles/blocks/_slogan.scss
+++ b/styles/blocks/_slogan.scss
@@ -7,6 +7,15 @@
   font-weight: 400;
   line-height: 110%; /* 46.2px */
   letter-spacing: -0.84px;
+  span {
+    color: $blue;
+    font-family: $mainFont;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: -0.84px;
+  }
 
   @media (max-width: 1024px) {
     max-width: unset;
