--- a/styles/index.css
+++ b/styles/index.css
@@ -2300,6 +2300,10 @@ section {
   padding-top: 67.5px;
   padding-bottom: 122px;
 }
+.promo-section--projects .wrapper {
+  padding-top: 90px;
+  padding-bottom: 63px;
+}
 @media (max-width: 1280px) {
   .promo-section__wrapper {
     padding-top: 108px;
@@ -3120,4 +3124,122 @@ section {
     max-width: 207px;
     height: 155px;
   }
+}
+
+.project-section__tab-list {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 321px;
+  margin-bottom: 48px;
+  flex-direction: row;
+  align-items: center;
+  gap: 18px;
+  background-color: #fff;
+}
+.project-section__table {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, calc(50% - 16px));
+  gap: 16px;
+}
+.project-section__table-cell {
+  position: relative;
+  width: 100%;
+  height: 411px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: end;
+}
+.project-section__table-cell:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+.project-section__table-cell:hover .project-section__table-cell-heading,
+.project-section__table-cell:hover .project-section__table-cell-text,
+.project-section__table-cell:hover .project-section__table-cell-category-list {
+  opacity: 1;
+  visibility: visible;
+}
+.project-section__table-cell::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  transition: 0.23s;
+  opacity: 0;
+  visibility: hidden;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
+}
+.project-section__table-cell-heading {
+  color: #fff;
+  margin-bottom: 9px;
+  font-family: "Noah", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  transition: 0.23s;
+  opacity: 0;
+  visibility: hidden;
+}
+.project-section__table-cell-text {
+  max-width: 486px;
+  margin-bottom: 26.75px;
+  color: #fff;
+  font-family: "Noah", sans-serif;
+  font-size: 16.5px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 18.15px */
+  letter-spacing: -0.495px;
+  transition: 0.23s;
+  opacity: 0;
+  visibility: hidden;
+}
+.project-section__table-cell-category-list {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  transition: 0.23s;
+  opacity: 0;
+  visibility: hidden;
+}
+.project-section__table-cell-category-list-link {
+  color: #151515;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Noah", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  text-transform: uppercase;
+  padding: 6px 9px;
+  border-radius: 75px;
+  background: #d4d4d4;
+}
+.project-section__table-cell-img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -2;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.project-section__more-btn {
+  max-width: 200px;
+  font-size: 15px;
+  letter-spacing: -0.3px;
+  margin: 0 auto;
+  margin-top: 48px;
+  margin-bottom: 2px;
 }/*# sourceMappingURL=index.css.map */
