--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.project-section {
+.projects-section {
   &__wrapper {
     flex-direction: column;
     align-items: flex-start;
@@ -413,11 +413,11 @@
 
 .offers-section {
   &__content {
-    @extend .project-section__content;
+    @extend .projects-section__content;
   }
 
   &__sidebar {
-    @extend .project-section__sidebar;
+    @extend .projects-section__sidebar;
     height: fit-content;
     position: sticky;
     left: 0;
@@ -443,7 +443,7 @@
     width: 100%;
   }
   &__mobile-btn {
-    @extend .project-section__mobile-btn;
+    @extend .projects-section__mobile-btn;
   }
 
   @media (max-width: 1280px) {
@@ -520,7 +520,7 @@
     padding: 15px 55px;
   }
   &__mobile-btn {
-    @extend .project-section__mobile-btn;
+    @extend .projects-section__mobile-btn;
   }
 
   @media (max-width: 1280px) {
