--- a/styles/pages/_projects.scss
+++ b/styles/pages/_projects.scss
@@ -21,9 +21,15 @@
     grid-template-columns: repeat(2, calc(50% - 16px));
     gap: 16px;
   }
+  &__table-link-wrapper {
+    display: inline-block;
+    width: 100%;
+    height: 411px;
+  }
 
   &__table-cell {
     position: relative;
+    overflow: hidden;
     width: 100%;
     height: 411px;
     padding: 30px;
@@ -41,6 +47,10 @@
       .project-section__table-cell-category-list {
         opacity: 1;
         visibility: visible;
+      }
+
+      .project-section__table-cell-img {
+        transform: scale(1.1);
       }
     }
     &::after {
@@ -123,6 +133,7 @@
     z-index: -2;
     object-fit: cover;
     object-position: center;
+    transition: $defaultTransitionTime;
   }
   &__more-btn {
     max-width: 200px;
@@ -131,5 +142,149 @@
     margin: 0 auto;
     margin-top: 48px;
     margin-bottom: 2px;
+  }
+
+  &__table-cell-icon {
+    display: none;
+  }
+  &__table-cell-subheading {
+    display: none;
+  }
+
+  @media (max-width: 1280px) {
+    &__tab-list {
+      margin: 0;
+      width: 100%;
+      padding: 48px 0px;
+      position: sticky;
+      left: 0;
+      top: 0;
+      z-index: 99;
+    }
+  }
+  @media (max-width: 1024px) {
+    &__table {
+      row-gap: 48px;
+      column-gap: 24px;
+    }
+    &__table-cell {
+      padding: 0;
+      height: auto;
+      &::after {
+        display: none;
+      }
+      &:hover {
+        .project-section__table-cell-img {
+          transform: unset;
+        }
+
+        .project-section__table-cell-icon {
+          transform: rotate(0deg);
+        }
+      }
+    }
+    &__table-link-wrapper {
+      height: auto;
+    }
+    &__table-cell-img {
+      max-width: 468px;
+      height: 310px;
+      position: static;
+      order: 1;
+      margin-bottom: 16px;
+    }
+    &__table-cell-heading {
+      display: none;
+    }
+    &__table-cell-subheading {
+      width: 100%;
+      order: 3;
+      color: $black;
+      leading-trim: both;
+      text-edge: cap;
+      font-family: $mainFont;
+      font-size: 19.176px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 21px;
+    }
+    &__table-cell-category-list {
+      margin-bottom: 16px;
+      order: 2;
+    }
+    &__table-cell-text {
+      max-width: 95%;
+      font-size: 14.915px;
+      margin-bottom: 0;
+      order: 4;
+    }
+    &__table-cell-heading,
+    &__table-cell-text,
+    &__table-cell-category-list {
+      opacity: 1;
+      visibility: visible;
+    }
+    &__table-cell-text,
+    &__table-cell-heading {
+      color: $black;
+    }
+    &__table-cell-icon {
+      margin-right: 6px;
+      display: inline-block;
+      transform: rotate(45deg);
+      transition: $defaultTransitionTime;
+    }
+  }
+
+  @media (max-width: 768px) {
+    &__tab-list {
+      padding: 40px 0px;
+    }
+    &__table-cell-img {
+      max-width: 352px;
+      height: 250px;
+      margin-bottom: 16px;
+    }
+    &__table-cell-category-list {
+      margin-bottom: 16px;
+    }
+  }
+
+  @media (max-width: 675px) {
+    &__tab-list {
+      padding: 24px 0px;
+    }
+    &__table {
+      row-gap: 40px;
+      grid-template-columns: 1fr;
+    }
+    &__table-cell-img {
+      max-width: unset;
+      height: 320px;
+      margin-bottom: 16px;
+    }
+  }
+}
+
+.promo-section--projects {
+  @media (max-width: 1280px) {
+    .slogan {
+      max-width: unset;
+    }
+    .wrapper {
+      padding-top: 108px;
+      padding-bottom: 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .wrapper {
+      padding-bottom: 40px;
+      border-bottom: 1.2px solid $lt-grey;
+    }
   }
 }
