--- a/styles/index.css
+++ b/styles/index.css
@@ -3453,6 +3453,7 @@ section {
      object-position: center;
 }
 .item-section__info {
+  margin: 0;
   padding-bottom: 88.25px;
 }
 .item-section__info-wrapper, .item-section__idea-body {
@@ -3526,6 +3527,7 @@ section {
   line-height: 120%; /* 21.6px */
 }
 .item-section__idea {
+  margin: 0;
   padding-top: 90px;
   padding-bottom: 88.25px;
   background-color: #e9e9e9;
@@ -3594,6 +3596,268 @@ section {
 .item-section__category-list {
   margin-top: 47.25px;
 }
+@media (max-width: 1024px) {
+  .item-section__category-list {
+    margin-top: 0;
+  }
+  .item-section__hero-content {
+    margin-left: 0;
+    margin-bottom: 72px;
+  }
+  .item-section__hero-heading {
+    max-width: unset;
+    margin-bottom: 32px;
+  }
+  .item-section__hero-images {
+    grid-template-columns: 1fr;
+    grid-template-rows: 570px;
+  }
+  .item-section__hero-img--first {
+    display: none;
+  }
+  .item-section__info-col, .item-section__idea-col {
+    gap: 34px;
+  }
+  .item-section__info-col-heading {
+    font-size: 20px;
+    letter-spacing: -0.4px;
+  }
+  .item-section__info {
+    padding-bottom: 72px;
+  }
+  .item-section__info-list-item {
+    gap: 8px;
+  }
+  .item-section__info-heading, .item-section__idea-heading, .item-section__func-heading, .item-section__result-heading {
+    margin-bottom: 32px;
+    font-size: 32px;
+  }
+  .item-section__info-list-item-heading {
+    font-size: 20px;
+  }
+  .item-section__info-text-content, .item-section__idea-text-content {
+    gap: 32px;
+  }
+  .item-section__info-text, .item-section__idea-text, .item-section__func-text, .item-section__result-text {
+    font-size: 24px;
+  }
+  .item-section__idea {
+    padding: 32px 0px;
+    padding-bottom: 56px;
+  }
+  .item-section__idea-img {
+    max-width: unset;
+    height: 582px;
+    margin-bottom: 56px;
+  }
+  .item-section__func {
+    padding: 56px 0px;
+  }
+  .item-section__bulleted-list {
+    margin-bottom: 56px;
+  }
+  .item-section__func-img {
+    height: 582px;
+    margin-bottom: 56px;
+  }
+  .item-section__result-text {
+    margin-bottom: 56px;
+  }
+}
+@media (max-width: 768px) {
+  .item-section__hero {
+    padding-top: 106px;
+    margin-bottom: 56px;
+  }
+  .item-section__hero-heading {
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+  .item-section__hero-content {
+    margin-bottom: 56px;
+  }
+  .item-section__hero-images {
+    grid-template-rows: 400px;
+  }
+  .item-section__info {
+    padding-bottom: 56px;
+  }
+  .item-section__info-wrapper, .item-section__idea-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 48px;
+  }
+  .item-section__info-col, .item-section__idea-col {
+    gap: 16px;
+  }
+  .item-section__info-list {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    flex-direction: row;
+  }
+  .item-section__idea {
+    padding-top: 24px;
+    padding-bottom: 72px;
+  }
+  .item-section__idea-img {
+    height: 400px;
+  }
+  .item-section__idea-body {
+    flex-direction: column-reverse;
+  }
+  .item-section__func {
+    margin-bottom: 100px;
+    padding-bottom: 73px;
+  }
+  .item-section__func-wrapper, .item-section__result-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .item-section__func-img {
+    height: 420px;
+    margin-bottom: 56px;
+  }
+  .item-section__bulleted-list {
+    margin-top: 32px;
+  }
+}
+@media (max-width: 568px) {
+  .item-section__main-link {
+    font-size: 20px;
+  }
+  .item-section__hero {
+    margin-bottom: 48px;
+  }
+  .item-section__hero-heading {
+    margin-bottom: 19px;
+  }
+  .item-section__hero-images {
+    grid-template-rows: 320px;
+  }
+  .item-section__category-list-item-link {
+    font-size: 16px;
+    padding: 12px 16px;
+  }
+  .item-section__info {
+    padding-bottom: 48px;
+  }
+  .item-section__info-heading, .item-section__idea-heading, .item-section__func-heading, .item-section__result-heading {
+    font-size: 28px;
+    margin-bottom: 24px;
+  }
+  .item-section__info-text, .item-section__idea-text, .item-section__func-text, .item-section__result-text {
+    font-size: 20px;
+  }
+  .item-section__info-text-content, .item-section__idea-text-content {
+    gap: 24px;
+  }
+  .item-section__idea {
+    padding-bottom: 55px;
+    padding-top: 20px;
+  }
+  .item-section__idea-img {
+    height: 289px;
+    margin-bottom: 48px;
+  }
+  .item-section__func {
+    padding-top: 20px;
+    margin-bottom: 72px;
+  }
+  .item-section__func-img {
+    height: 310px;
+    margin-bottom: 48px;
+  }
+  .item-section__bulleted-list {
+    margin-bottom: 48px;
+  }
+}
+@media (max-width: 375px) {
+  .item-section__hero {
+    margin-bottom: 32px;
+    padding-top: 48px;
+  }
+  .item-section__hero-heading {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+  .item-section__hero-content {
+    margin-bottom: 32px;
+  }
+  .item-section__hero-images {
+    grid-template-rows: 320px;
+  }
+  .item-section__category-list {
+    gap: 8px;
+  }
+  .item-section__category-list-item-link {
+    padding: 8px 12px;
+    font-size: 12px;
+  }
+  .item-section__info {
+    padding-bottom: 32px;
+  }
+  .item-section__info-col, .item-section__idea-col {
+    gap: 8px;
+  }
+  .item-section__info-col-heading {
+    font-size: 12px;
+  }
+  .item-section__info-list-item {
+    gap: 4px;
+  }
+  .item-section__info-list-item-icon svg {
+    width: 15px;
+    height: 15px;
+  }
+  .item-section__info-list-item-heading {
+    font-size: 12px;
+  }
+  .item-section__info-wrapper, .item-section__idea-body {
+    gap: 24px;
+  }
+  .item-section__info-heading, .item-section__idea-heading, .item-section__func-heading, .item-section__result-heading {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+  .item-section__info-text, .item-section__idea-text, .item-section__func-text, .item-section__result-text {
+    font-size: 16px;
+  }
+  .item-section__info-text-content, .item-section__idea-text-content {
+    gap: 16px;
+  }
+  .item-section__idea {
+    padding-top: 24px;
+    padding-bottom: 72px;
+  }
+  .item-section__idea-img {
+    height: 327px;
+    margin-bottom: 32px;
+  }
+  .item-section__main-link {
+    font-size: 16px;
+  }
+  .item-section__func {
+    padding-top: 48px;
+    padding-bottom: 49px;
+  }
+  .item-section__func-img {
+    max-width: 327px;
+    display: block;
+    height: 327px;
+    margin: 0 auto;
+    margin-bottom: 37px;
+  }
+  .item-section__bulleted-list {
+    margin-top: 16px;
+    margin-bottom: 32px;
+  }
+}
+
 .bulleted-list {
   display: flex;
   flex-direction: column;
@@ -3618,6 +3882,22 @@ section {
   left: 9px;
   top: 0;
   color: #fff;
+}
+@media (max-width: 1024px) {
+  .bulleted-list__item {
+    font-size: 24px;
+    line-height: 120%;
+  }
+}
+@media (max-width: 568px) {
+  .bulleted-list__item {
+    font-size: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .bulleted-list__item {
+    font-size: 16px;
+  }
 }
 
 .ordered-list {
@@ -3646,4 +3926,25 @@ section {
   top: 0;
   content: counter(item, decimal-leading-zero) " ";
   counter-increment: item;
+}
+@media (max-width: 768px) {
+  .ordered-list {
+    gap: 32px;
+  }
+  .ordered-list__item {
+    font-size: 24px;
+  }
+}
+@media (max-width: 568px) {
+  .ordered-list {
+    gap: 24px;
+  }
+  .ordered-list__item {
+    font-size: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .ordered-list {
+    gap: 16px;
+  }
 }/*# sourceMappingURL=index.css.map */
