--- a/styles/pages/_item.scss
+++ b/styles/pages/_item.scss
@@ -70,6 +70,7 @@
   }
 
   &__info {
+    margin: 0;
     padding-bottom: 88.25px;
   }
 
@@ -156,6 +157,7 @@
     line-height: 120%; /* 21.6px */
   }
   &__idea {
+    margin: 0;
     padding-top: 90px;
     padding-bottom: 88.25px;
     background-color: #e9e9e9;
@@ -265,10 +267,278 @@
     margin-top: 47.25px;
   }
 
-  &__category-list-item {
+  @media (max-width: 1024px) {
+    &__category-list {
+      margin-top: 0;
+    }
+    &__hero-content {
+      margin-left: 0;
+      margin-bottom: 72px;
+    }
+    &__hero-heading {
+      max-width: unset;
+      margin-bottom: 32px;
+    }
+    &__hero-images {
+      grid-template-columns: 1fr;
+      grid-template-rows: 570px;
+    }
+    &__hero-img {
+      &--first {
+        display: none;
+      }
+    }
+    &__info-col {
+      gap: 34px;
+      &-heading {
+        font-size: 20px;
+        letter-spacing: -0.4px;
+      }
+    }
+    &__info {
+      padding-bottom: 72px;
+    }
+    &__info-list-item {
+      gap: 8px;
+    }
+    &__info-heading {
+      margin-bottom: 32px;
+      font-size: 32px;
+    }
+    &__info-list-item-heading {
+      font-size: 20px;
+    }
+    &__info-text-content {
+      gap: 32px;
+    }
+    &__info-text {
+      font-size: 24px;
+    }
+    &__idea {
+      padding: 32px 0px;
+      padding-bottom: 56px;
+    }
+
+    &__idea-img {
+      max-width: unset;
+      height: 582px;
+      margin-bottom: 56px;
+    }
+    &__func {
+      padding: 56px 0px;
+    }
+
+    &__bulleted-list {
+      margin-bottom: 56px;
+    }
+    &__func-img {
+      height: 582px;
+      margin-bottom: 56px;
+    }
+
+    &__result-text {
+      margin-bottom: 56px;
+    }
   }
 
-  &__category-list-item-link {
+  @media (max-width: 768px) {
+    &__hero {
+      padding-top: 106px;
+      margin-bottom: 56px;
+      &-heading {
+        font-size: 32px;
+        margin-bottom: 24px;
+      }
+      &-content {
+        margin-bottom: 56px;
+      }
+      &-images {
+        grid-template-rows: 400px;
+      }
+    }
+    &__info {
+      padding-bottom: 56px;
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: start;
+        gap: 48px;
+      }
+      &-col {
+        gap: 16px;
+      }
+      &-list {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        flex-direction: row;
+      }
+    }
+    &__idea {
+      padding-top: 24px;
+      padding-bottom: 72px;
+      &-img {
+        height: 400px;
+      }
+      &-body {
+        flex-direction: column-reverse;
+      }
+    }
+    &__func {
+      margin-bottom: 100px;
+      padding-bottom: 73px;
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: start;
+      }
+      &-img {
+        height: 420px;
+        margin-bottom: 56px;
+      }
+    }
+    &__bulleted-list {
+      margin-top: 32px;
+    }
+  }
+
+  @media (max-width: 568px) {
+    &__main-link {
+      font-size: 20px;
+    }
+    &__hero {
+      margin-bottom: 48px;
+      &-heading {
+        margin-bottom: 19px;
+      }
+      &-images {
+        grid-template-rows: 320px;
+      }
+    }
+
+    &__category-list-item-link {
+      font-size: 16px;
+      padding: 12px 16px;
+    }
+
+    &__info {
+      padding-bottom: 48px;
+    }
+    &__info-heading {
+      font-size: 28px;
+      margin-bottom: 24px;
+    }
+    &__info-text {
+      font-size: 20px;
+      &-content {
+        gap: 24px;
+      }
+    }
+    &__idea {
+      padding-bottom: 55px;
+      padding-top: 20px;
+      &-img {
+        height: 289px;
+        margin-bottom: 48px;
+      }
+    }
+    &__func {
+      padding-top: 20px;
+      margin-bottom: 72px;
+      &-img {
+        height: 310px;
+        margin-bottom: 48px;
+      }
+    }
+    &__bulleted-list {
+      margin-bottom: 48px;
+    }
+  }
+
+  @media (max-width: 375px) {
+    &__hero {
+      margin-bottom: 32px;
+      padding-top: 48px;
+      &-heading {
+        font-size: 24px;
+        margin-bottom: 16px;
+      }
+      &-content {
+        margin-bottom: 32px;
+      }
+      &-images {
+        grid-template-rows: 320px;
+      }
+    }
+    &__category-list {
+      gap: 8px;
+    }
+    &__category-list-item-link {
+      padding: 8px 12px;
+      font-size: 12px;
+    }
+    &__info {
+      padding-bottom: 32px;
+    }
+    &__info-col {
+      gap: 8px;
+    }
+    &__info-col-heading {
+      font-size: 12px;
+    }
+    &__info-list-item {
+      gap: 4px;
+    }
+    &__info-list-item-icon {
+      svg {
+        width: 15px;
+        height: 15px;
+      }
+    }
+    &__info-list-item-heading {
+      font-size: 12px;
+    }
+    &__info-wrapper {
+      gap: 24px;
+    }
+    &__info-heading {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+    &__info-text {
+      font-size: 16px;
+      &-content {
+        gap: 16px;
+      }
+    }
+    &__idea {
+      padding-top: 24px;
+      padding-bottom: 72px;
+      &-img {
+        height: 327px;
+        margin-bottom: 32px;
+      }
+    }
+    &__main-link {
+      font-size: 16px;
+    }
+    &__func {
+      padding-top: 48px;
+      padding-bottom: 49px;
+      &-img {
+        max-width: 327px;
+        display: block;
+        height: 327px;
+        margin: 0 auto;
+        margin-bottom: 37px;
+      }
+    }
+    &__bulleted-list {
+      margin-top: 16px;
+      margin-bottom: 32px;
+    }
   }
 }
 
@@ -296,6 +566,24 @@
       color: $white;
     }
   }
+
+  @media (max-width: 1024px) {
+    &__item {
+      font-size: 24px;
+      line-height: 120%;
+    }
+  }
+
+  @media (max-width: 568px) {
+    &__item {
+      font-size: 20px;
+    }
+  }
+  @media (max-width: 375px) {
+    &__item {
+      font-size: 16px;
+    }
+  }
 }
 .ordered-list {
   display: flex;
@@ -321,6 +609,24 @@
       top: 0;
       content: counter(item, decimal-leading-zero) ' ';
       counter-increment: item;
+    }
+  }
+
+  @media (max-width: 768px) {
+    gap: 32px;
+    &__item {
+      font-size: 24px;
+    }
+  }
+  @media (max-width: 568px) {
+    gap: 24px;
+    &__item {
+      font-size: 20px;
+    }
+  }
+  @media (max-width: 375px) {
+    gap: 16px;
+    &__item {
     }
   }
 }
